# parking-space-reservation-chatbot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: parking_info.md
docs/superpowers/plans/: 2026-07-16-stage1-rag-chatbot.md
docs/superpowers/specs/: 2026-07-16-stage1-design.md
evaluation/: evaluate.py  test_dataset.json
graph/: nodes.py  pipeline.py  state.py
tests/: conftest.py  test_evaluation.py  test_ingestion.py  test_nodes.py  test_retriever.py
vector_store/: ingestion.py  retriever.py
